# falcon-quickstart

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
falcon_quickstart/: app.py  config.py
falcon_quickstart/logger/: gunicorn.py  handler.py  setup.py
falcon_quickstart/middlewares/: __init__.py  db.py
falcon_quickstart/models/: session.py
falcon_quickstart/resources/: __init__.py  index.py  limiter.py
falcon_quickstart/static/: index.html  style.css
falcon_quickstart/utils/: error_handler.py  gunicorn.py  hooks.py
