[tool.poetry]
name = "falcon-quickstart"
version = "0.1.0"
description = ""
authors = ["Dominik Muhs <dmuhs@protonmail.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "falcon_quickstart"}]

[tool.poetry.dependencies]
python = "^3.11"
falcon = "^3.1.3"
loguru = "^0.7.2"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.30"
falcon-limiter = "^1.0.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "falcon_quickstart.app:main"
